--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ pandas>=2.0.0
 python-dotenv>=1.0.0
 
 # ── AI & Document Intelligence ────────────────────────────────────────────────
-anthropic>=0.25.0
+openai>=1.30.0
 pillow>=10.0.0
 pytesseract>=0.3.10        # also requires: brew install tesseract tesseract-lang
 opencv-python>=4.9.0.80
