--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,8 +1,8 @@
 [theme]
-primaryColor = "#E94560"
-backgroundColor = "#1A1A2E"
-secondaryBackgroundColor = "#16213E"
-textColor = "#EDF2F4"
+primaryColor = "#0FA876"
+backgroundColor = "#F0FDF8"
+secondaryBackgroundColor = "#E6FAF3"
+textColor = "#1A3D30"
 font = "sans serif"
 
 [server]
